# monstrocity

./: .gitignore  Cargo.toml  README.md  webhook.toml
localization/: monstocity_en-US.ftl
src/: dialog.rs  main.rs
src/bot/: Cargo.toml
src/bot/src/: main.rs
src/telegram/: Cargo.toml
src/telegram/src/: bot.rs  config.rs  dialog.rs  lib.rs  methods.rs  objects.rs  worker.rs
src/webhook/: Cargo.toml
src/webhook/src/: main.rs
telegram/: Cargo.toml
telegram/src/: bot.rs  command.rs  config.rs  dispatcher.rs  lib.rs  methods.rs  objects.rs  types.rs
webhook/: Cargo.toml
webhook/src/: main.rs
