[package]
name = "telegram"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
env_logger = "*"
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
redis = "0.8"
reqwest = "0.8"
regex = "*"
uuid = { version = "0.4", features = ["serde", "v4"] }
tiny_http = "0.5"
chrono = { version = "0.4", features = ["serde"] }