[package]
name = "webhook"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]

[dependencies]
log = "*"
env_logger = "*"
telegram = { path = "../telegram/" }
ctrlc = { version = "3.0", features = ["termination"] }
redis = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tiny_http = "0.5"
toml = "0.4"